--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
      Google Maps Android API v2, but are recommended.
     -->
     <permission
-        android:name="com.incon.connect.permission.MAPS_RECEIVE"
+        android:name="com.incon.service.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
 
     <uses-permission android:name="com.incon.connect.permission.MAPS_RECEIVE"/>
