--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,14 +100,23 @@
             android:name="com.incon.service.ui.settings.SettingsActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait">
-
         </activity>
 
+
+        <activity
+            android:name=".ui.addservicecenter.AddServiceCenterActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".ui.adduser.AddUserActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait">
+        </activity>
         <activity
             android:name="com.incon.service.ui.changepassword.ChangePasswordActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait">
-
         </activity>
 
         <activity
