1.Assign api implemted and called

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,6 +142,8 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:2.3.0'
     // material spinner
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    // shimmer
+    compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
     //rounded imageview
     compile 'de.hdodenhof:circleimageview:2.1.0'
     allprojects {
