--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,6 @@ android {
         debug {
             resValue 'string', 'default_key', "Basic Y29ubmVjdDpzM2NyZXQ="
 
-            buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://ec2-52-11-96-200.us-west-2.compute.amazonaws.com:9898/connect/\""
             buildConfigField 'boolean', 'LOG_VALUE', 'true'
         }
 
@@ -69,7 +68,7 @@ android {
         connect_production {
             resValue "string", "app_name", "Connect Service pro"
 
-            buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://ec2-13-126-102-199.ap-south-1.compute.amazonaws.com:8443/connect/\""
+            buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://13.126.102.199:9898/connect/\""
         }
 
         /*moonz_dev {
