--- a/app/build.gradle
+++ b/app/build.gradle
@@ -155,6 +155,8 @@ dependencies {
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
     // shimmer effect
     compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
+    // horizontal calender
+    compile 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.2'
     //rounded imageview
     compile 'de.hdodenhof:circleimageview:2.1.0'
     allprojects {
