--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,12 +61,7 @@ android {
     productFlavors {
 
         connect_staging {
-            resValue "string", "app_name", "Connect Service dev"
-
-            buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://ec2-52-11-96-200.us-west-2.compute.amazonaws.com/connect/\""
-        }
-        connect_production {
-            resValue "string", "app_name", "Connect Service pro"
+            resValue "string", "app_name", "Connect Service stage"
 
             buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://13.126.102.199/connect/\""
         }
@@ -76,21 +71,6 @@ android {
             buildConfigField 'String', 'SERVICE_ENDPOINT', "\"https://connect.incontechnologies.in/api/\""
         }
 
-        /*moonz_dev {
-            buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://ec2-52-11-96-200.us-west-2.compute.amazonaws.com:9898/connect/\""
-            buildConfigField 'boolean', 'LOG_VALUE', 'true'
-            resValue "string", "app_name", "Connect Service"
-        }*/
-        /*client_staging {
-            buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://ec2-52-11-96-200.us-west-2.compute.amazonaws.com:9898/connect/\""
-            buildConfigField 'boolean', 'LOG_VALUE', 'false'
-            resValue "string", "app_name", "Connect stage"
-        }
-        client_production {
-            buildConfigField 'String', 'SERVICE_ENDPOINT', "\"http://ec2-52-11-96-200.us-west-2.compute.amazonaws.com:9898/connect/\""
-            buildConfigField 'boolean', 'LOG_VALUE', 'false'
-            resValue "string", "app_name", "Connect pro"
-        }*/
     }
 
     dataBinding {
